fix p generation mobile

--- a/app/src/assets/css/pages/generator.pcss
+++ b/app/src/assets/css/pages/generator.pcss
@@ -291,6 +291,10 @@
           }
         }
 
+        .only-mobile {
+          display: none;
+        }
+
         .error__content,
         .error__content-clear {
           background: #f8fafb;
@@ -727,6 +731,12 @@
           }
 
           .mobile-resp {
+            margin-bottom: 10px;
+            display: none;
+          }
+
+          .only-mobile {
+            display: block;
             margin-bottom: 10px;
           }
 
